@@ -579,7 +579,7 @@ public class ElasticSearchClientServiceImpl extends AbstractControllerService im
         final List<String> warnings = Arrays.stream(response.getHeaders())
                 .filter(h -> "Warning".equalsIgnoreCase(h.getName()))
                 .map(Header::getValue)
-                .collect(Collectors.toList());
+                .toList();
 
         warnings.forEach(w -> getLogger().warn("Elasticsearch Warning: {}", w));
 
@@ -627,13 +627,11 @@ public class ElasticSearchClientServiceImpl extends AbstractControllerService im
         final String header = buildBulkHeader(request);
         builder.append(header).append("\n");
         switch (request.getOperation()) {
-            case Index:
-            case Create:
+            case Index, Create:
                 final String indexDocument = mapper.writeValueAsString(request.getFields());
                 builder.append(indexDocument).append("\n");
                 break;
-            case Update:
-            case Upsert:
+            case Update, Upsert:
                 final Map<String, Object> updateBody = new HashMap<>(2, 1);
                 if (request.getScript() != null && !request.getScript().isEmpty()) {
                     updateBody.put("script", request.getScript());
@@ -668,7 +666,7 @@ public class ElasticSearchClientServiceImpl extends AbstractControllerService im
             }
 
             if (getLogger().isDebugEnabled()) {
-                getLogger().debug(payload.toString());
+                getLogger().debug("{}", payload);
             }
             final HttpEntity entity = new NStringEntity(payload.toString(), ContentType.APPLICATION_JSON);
             final StopWatch watch = new StopWatch();
@@ -680,7 +678,7 @@ public class ElasticSearchClientServiceImpl extends AbstractControllerService im
             parseResponseWarningHeaders(response);
 
             if (getLogger().isDebugEnabled()) {
-                getLogger().debug(String.format("Response was: %s", rawResponse));
+                getLogger().debug("Response was: {}", rawResponse);
             }
 
             return IndexOperationResponse.fromJsonResponse(rawResponse);
@@ -717,8 +715,7 @@ public class ElasticSearchClientServiceImpl extends AbstractControllerService im
             watch.stop();
 
             if (getLogger().isDebugEnabled()) {
-                getLogger().debug(String.format("Response for bulk delete: %s",
-                        IOUtils.toString(response.getEntity().getContent(), StandardCharsets.UTF_8)));
+                getLogger().debug("Response for bulk delete: {}", IOUtils.toString(response.getEntity().getContent(), StandardCharsets.UTF_8));
             }
 
             parseResponseWarningHeaders(response);
@@ -880,7 +877,7 @@ public class ElasticSearchClientServiceImpl extends AbstractControllerService im
             parseResponseWarningHeaders(response);
 
             if (getLogger().isDebugEnabled()) {
-                getLogger().debug(String.format("Response for initialising Point in Time: %s", body));
+                getLogger().debug("Response for initialising Point in Time: {}", body);
             }
 
             return (String) mapper.readValue(body, Map.class).get("id");
@@ -899,9 +896,7 @@ public class ElasticSearchClientServiceImpl extends AbstractControllerService im
             watch.stop();
 
             if (getLogger().isDebugEnabled()) {
-                getLogger().debug(String.format("Response for deleting Point in Time: %s",
-                        IOUtils.toString(response.getEntity().getContent(), StandardCharsets.UTF_8))
-                );
+                getLogger().debug("Response for deleting Point in Time: {}", IOUtils.toString(response.getEntity().getContent(), StandardCharsets.UTF_8));
             }
 
             parseResponseWarningHeaders(response);
@@ -927,9 +922,7 @@ public class ElasticSearchClientServiceImpl extends AbstractControllerService im
             watch.stop();
 
             if (getLogger().isDebugEnabled()) {
-                getLogger().debug(String.format("Response for deleting Scroll: %s",
-                        IOUtils.toString(response.getEntity().getContent(), StandardCharsets.UTF_8))
-                );
+                getLogger().debug("Response for deleting Scroll: {}", IOUtils.toString(response.getEntity().getContent(), StandardCharsets.UTF_8));
             }
 
             parseResponseWarningHeaders(response);
@@ -950,7 +943,8 @@ public class ElasticSearchClientServiceImpl extends AbstractControllerService im
         final Map<String, Object> parsed = parseResponse(response);
         final List<String> warnings = parseResponseWarningHeaders(response);
 
-        final int took = (Integer) parsed.get("took");
+        // took should be an int, but could be a long (bg in Elasticsearch 8.15.0)
+        final long took = Long.parseLong(String.valueOf(parsed.get("took")));
         final boolean timedOut = (Boolean) parsed.get("timed_out");
         final String pitId = parsed.get("pit_id") != null ? (String) parsed.get("pit_id") : null;
         final String scrollId = parsed.get("_scroll_id") != null ? (String) parsed.get("_scroll_id") : null;
@@ -1035,7 +1029,7 @@ public class ElasticSearchClientServiceImpl extends AbstractControllerService im
                         .append("\n");
             }
 
-            getLogger().debug(builder.toString());
+            getLogger().debug("{}", builder);
         }
 
         return client.performRequest(request);
