@@ -60,7 +60,6 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -165,31 +164,34 @@ public class GenerateTableFetch extends AbstractDatabaseFetchProcessor {
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
             .build();
 
+    private static final List<PropertyDescriptor> PROPERTIES = List.of(
+            DBCP_SERVICE,
+            DB_TYPE,
+            TABLE_NAME,
+            COLUMN_NAMES,
+            MAX_VALUE_COLUMN_NAMES,
+            QUERY_TIMEOUT,
+            PARTITION_SIZE,
+            COLUMN_FOR_VALUE_PARTITIONING,
+            WHERE_CLAUSE,
+            CUSTOM_ORDERBY_COLUMN,
+            OUTPUT_EMPTY_FLOWFILE_ON_ZERO_RESULTS
+    );
+
     public static final Relationship REL_FAILURE = new Relationship.Builder()
             .name("failure")
             .description("This relationship is only used when SQL query execution (using an incoming FlowFile) failed. The incoming FlowFile will be penalized and routed to this relationship. "
                     + "If no incoming connection(s) are specified, this relationship is unused.")
             .build();
 
-    public GenerateTableFetch() {
-        final Set<Relationship> r = new HashSet<>();
-        r.add(REL_SUCCESS);
-        r.add(REL_FAILURE);
-        relationships = Collections.unmodifiableSet(r);
+    private static final Set<Relationship> RELATIONSHIPS = Set.of(
+            REL_SUCCESS,
+            REL_FAILURE
+    );
 
-        final List<PropertyDescriptor> pds = new ArrayList<>();
-        pds.add(DBCP_SERVICE);
-        pds.add(DB_TYPE);
-        pds.add(TABLE_NAME);
-        pds.add(COLUMN_NAMES);
-        pds.add(MAX_VALUE_COLUMN_NAMES);
-        pds.add(QUERY_TIMEOUT);
-        pds.add(PARTITION_SIZE);
-        pds.add(COLUMN_FOR_VALUE_PARTITIONING);
-        pds.add(WHERE_CLAUSE);
-        pds.add(CUSTOM_ORDERBY_COLUMN);
-        pds.add(OUTPUT_EMPTY_FLOWFILE_ON_ZERO_RESULTS);
-        propDescriptors = Collections.unmodifiableList(pds);
+    public GenerateTableFetch() {
+        propDescriptors = PROPERTIES;
+        relationships = RELATIONSHIPS;
     }
 
     @Override
@@ -380,7 +382,7 @@ public class GenerateTableFetch extends AbstractDatabaseFetchProcessor {
                 final Integer queryTimeout = context.getProperty(QUERY_TIMEOUT).evaluateAttributeExpressions(fileToProcess).asTimePeriod(TimeUnit.SECONDS).intValue();
                 st.setQueryTimeout(queryTimeout); // timeout in seconds
 
-                logger.debug("Executing {}", new Object[]{selectQuery});
+                logger.debug("Executing {}", selectQuery);
                 ResultSet resultSet;
 
                 resultSet = st.executeQuery(selectQuery);
@@ -536,12 +538,12 @@ public class GenerateTableFetch extends AbstractDatabaseFetchProcessor {
                 }
             } catch (SQLException e) {
                 if (fileToProcess != null) {
-                    logger.error("Unable to execute SQL select query {} due to {}, routing {} to failure", new Object[]{selectQuery, e, fileToProcess});
+                    logger.error("Routing {} to failure since unable to execute SQL select query {}", fileToProcess, selectQuery, e);
                     fileToProcess = session.putAttribute(fileToProcess, "generatetablefetch.sql.error", e.getMessage());
                     session.transfer(fileToProcess, REL_FAILURE);
 
                 } else {
-                    logger.error("Unable to execute SQL select query {} due to {}", new Object[]{selectQuery, e});
+                    logger.error("Unable to execute SQL select query {}", selectQuery, e);
                     throw new ProcessException(e);
                 }
             }
